# cargo-soteria

./: .gitignore  .package-version.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  docker.yml  nightly.yml
src/: base_runner.rs  cleanup.rs  common.rs  help.rs  main.rs  nextest.rs  run.rs  runner_common.rs  setup.rs
tests/: integration.rs
tests/fixtures/: fake-soteria-rust.sh
tests/fixtures/kani-example/: Cargo.toml
tests/fixtures/kani-example/src/: lib.rs
tests/fixtures/many-slow-tests/: Cargo.toml
tests/fixtures/many-slow-tests/src/: lib.rs
tests/fixtures/many-tests/src/: lib.rs
tests/fixtures/simple-crate/src/: lib.rs
