[package]
name = "soteria"
version = "0.1.0"
edition = "2021"
description = "Cargo subcommand for running soteria-rust analysis"
license = "Apache-2.0"

[[bin]]
name = "cargo-soteria"
path = "src/main.rs"

[[bin]]
name = "soteria-cleanup"
path = "src/cleanup.rs"

[package.metadata]
# Pre-built soteria-rust binaries are currently only available for macOS on
# Apple Silicon (macos/aarch64). The build script enforces this at compile time.
supported-platforms = ["aarch64-apple-darwin"]

[dependencies]
zip = "2"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indicatif = "0.17"
colored = "2"
